OCaml/mini-c/tests/typing/bad/testfile-arith-2.c

struct S { int a; };
int main() { struct S *p; 1-p; }
